<resources>
    <string name="empty_show">-</string>
    <string name="progress_msg">Processing…</string>
    <string name="logout">Log off</string>
    <string name="close">Close</string>
    <string name="previous">Last</string>
    <string name="next">Next</string>
    <string name="clear">Clean</string>
    <string name="account">User ID</string>
    <string name="password">Password</string>
    <string name="account_remember">Remember account</string>
    <string name="login">Log in</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Done</string>
    <string name="edit">Edit</string>
    <string name="back">Return</string>
    <string name="remain">Remain</string>
    <string name="goto_setting">To setting page</string>
    <string name="time">Time</string>
    <string name="today">Today</string>
    <string name="more">More</string>
    <string name="sign_in">Check in</string>
    <string name="sign_out">Check out</string>
    <string name="customer">Company</string>
    <string name="person">Personal</string>
    <string name="use_wechat">Wechat</string>
    <string name="item">Project</string>
    <string name="assistant">Sales assistant</string>
    <string name="change">Revise</string>
    <string name="online_resource">On-line resources</string>
    <string name="money_unit">Dollars</string>
    <string name="order_unit">Page</string>
    <string name="people_unit">People</string>
    <string name="month">Month</string>
    <string name="day">SUN</string>
    <string name="this_week">This week</string>
    <string name="this_month">The month</string>
    <string name="last_month">Last month</string>
    <string name="week_unit">Weekly</string>
    <string name="month_unit">Month</string>
    <string name="season_unit">Quarterly</string>
    <string name="season1">1st season</string>
    <string name="season2">2nd season</string>
    <string name="season3">3rd season</string>
    <string name="season4">4th season</string>
    <string name="unit">pcs</string>
    <string name="go_to">Check</string>
    <string name="reason">Reason</string>
    <string name="complete_time">Complete time</string>
    <string name="estimate_amount">Estimated amount</string>
    <string name="other_worker">Other sales</string>
    <string name="relative_photo">Related picture</string>
    <string name="photo">Picture</string>
    <string name="report">Work report</string>
    <string name="note">Remark</string>
    <string name="other_info">Others</string>
    <string name="profile">Personal experience</string>
    <string name="other">Others</string>
    <string name="local_time">Local time</string>
    <string name="relative_doc">Related documents</string>
    <string name="send">Send</string>
    <string name="all">total</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="no_select">no selected</string>
    <string name="select_customer">Select customer</string>
    <string name="select_project">Select work item</string>
    <string name="msg_add_project">This customer hasn\'t any task yet,create a new task or not?</string>
    <string name="add_product">Create product</string>
    <string name="name_card">Business card</string>
    <string name="name_card_photo">business card \n photo</string>
    <string name="head_photo">Take a head shot</string>
    <string name="name">Name</string>
    <string name="last_name">Surname</string>
    <string name="division">Department</string>
    <string name="job_title">Position title</string>
    <string name="all_day">All day</string>
    <string name="select_photo_title">Select picture source</string>
    <string name="demand_unit">Unit name</string>
    <string name="remove">Remove</string>
    <string name="remove_confirm">remove confirm?</string>
    <string name="join_confirm">Would you Join?</string>
    <string name="scheduled_invite">Invitation schedule</string>
    <string name="scheduled_trip">Plan trip</string>
    <string name="scheduled_task">Plan task</string>
    <string name="no_sign_in">haven\'t check in</string>
    <string name="no_sign_out">haven\'t check out</string>
    <string name="unread_msg">Latest</string>
    <string name="trip">Schedule</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="resend">New apply</string>
    <string name="select_all">Select all</string>
    <string name="select_all_cancel">Cancel all</string>
    <string name="department">Department</string>
    <string name="all_type">All type</string>
    <string name="all_department">All departments</string>
    <string name="all_company">All branch</string>
    <string name="contract_all_amount">Total amount of contract</string>
    <string name="quotation_count">Total quantity of quotation</string>
    <string name="invoice_amount">Billing amount</string>
    <string name="sample_count">Total numbers of sample </string>
    <string name="all_people">All people</string>
    <string name="address">Address</string>
    <string name="selected">Selected</string>
    <string name="not_selected">haven\'t select</string>
    <string name="builder">Created user</string>
    <string name="filter">Filter</string>
    <string name="from">From</string>
    <string name="discount">Discount</string>
    <string name="batch_submit">Submit for all</string>
    <string name="space">(Blank)</string>
    <string name="absent_reason">Leave reason</string>
    <string name="absent_people">Leave people</string>
    <string name="travel_name">Business trip name</string>
    <string name="travel_info">Customer information</string>
    <string name="travel_reason">Purpose</string>
    <string name="travel_support">What\'s support you need</string>
    <string name="travel_customer_background">Customer background</string>
    <string name="travel_customer_tech">Customer technology</string>
    <string name="travel_participant">Suggested who with</string>
    <string name="express_name">Express name</string>
    <string-array name="express_type">
        <item>@string/express_type_free</item>
        <item>@string/express_type_value</item>
    </string-array>
    <string name="express_contract">Contract number</string>
    <string name="express_model">Express serial number &amp; quantity</string>
    <string name="express_amount">Product price</string>
    <string name="express_expense">Express charge</string>
    <string name="express_destination">Express Destination</string>
    <string name="express_reason">Apply reason</string>
    <string name="express_type_free">sample with free</string>
    <string name="express_type_value">Samples with price</string>
    <string name="express_origin">Origin</string>
    <string name="express_arrival_payment">Freight is paid by arrival or not</string>
    <string name="express_repayment_date">Plan collection date</string>
    <string name="special_ship_code">Shipping order number</string>
    <string name="special_ship_amount">Shipping amount</string>
    <string name="special_ship_not_bill_amount">Unbilled Amount</string>
    <string name="special_ship_not_expire_amount">Unpaid Amount</string>
    <string name="special_ship_expire_day">Latest due day</string>
    <string name="special_ship_expire_amount">Overdue total amount</string>
    <string name="special_ship_biggest_expire_day">The longest overdue days</string>
    <string name="special_ship_prepayment">Prepayment amount</string>
    <string name="special_ship_credit">Approved credit amt</string>
    <string name="special_ship_credit_risk">Credit risk limit</string>
    <string name="special_ship_less_than_500">Less than $500 ?</string>
    <string name="special_ship_repayment_date">Plan collection date</string>
    <string name="special_ship_ship_again">Whether deliver product again before plan collection date</string>
    <string name="special_ship_total">Total</string>
    <string name="special_ship_exceed_quota">Over the limit</string>
    <string name="repayment_date">Collection date</string>
    <string name="repayment_amount">Collection amount</string>
    <string name="repayment_type">Collection type</string>
    <string name="repayment_type_transfer">T/T</string>
    <string name="repayment_type_bill">Draft</string>
    <string name="spring_ring_inquiry_name">Inquire name of spring storage ring</string>
    <string name="spring_ring_inquiry_code">Inquiry number</string>
    <string name="spring_ring_inquiry_project_name">Abbreviation + Project name</string>
    <string name="spring_ring_inquiry_potential">Potential sales opportunity for year</string>
    <string name="spring_ring_inquiry_need_image">Need support from other department</string>
    <string name="spring_ring_inquiry_apply">Application and location</string>
    <string name="spring_ring_inquiry_product_type">Kind of Products</string>
    <string name="spring_ring_inquiry_competitive_status">Competition status</string>
    <string name="spring_ring_inquiry_sgb_advantage">SGB strength</string>
    <string name="spring_ring_inquiry_sgb_disadvantage">SGB weakness</string>
    <string name="spring_ring_inquiry_trend">Trend</string>
    <string name="spring_ring_inquiry_need_parity">Need compare price?</string>
    <string name="spring_ring_inquiry_sealed_state">Sealing state</string>
    <string name="spring_ring_inquiry_speed">Movement speed(RPM)</string>
    <string name="spring_ring_inquiry_pressure">Operation pressure</string>
    <string name="non_standard_inquiry_product_name">Product name (category)</string>
    <string name="product_code">Product number</string>
    <string name="inquiry_count">Product quantity</string>
    <string name="size">Products size</string>
    <string name="tolerance">Tolerance requirement</string>
    <string name="non_standard_inquiry_product_material">Material</string>
    <string name="hardness">Hardness(SHORE or IRHD)</string>
    <string name="color">Color</string>
    <string name="certification">Certification requirement</string>
    <string name="wrapping">Packing request</string>
    <string name="reference_number">Layout reference</string>
    <string name="medium">Medium</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="non_standard_inquiry_product_status">Dynamic / Static</string>
    <string name="line_speed">Line speed</string>
    <string name="year_count">Annual usage</string>
    <string name="product_category">Products group</string>
    <string name="hint_note">(Option)</string>
    <string name="hint_required">*(Required)</string>
    <string name="hint_not_required">(Option)</string>
    <string name="sample_item_category">Sample type</string>
    <string name="sample_item_type">Sample type</string>
    <string name="sample_item_report">Reports</string>
    <string name="sample_item_count">Apply Quantity</string>
    <string name="sample_item_year_count">Annual usage</string>
    <string name="sample_item_code">@string/product_code</string>
    <string name="sample_item_other">Others</string>
    <string name="sample_item_other_example">(e.g.  package request、lead-time request、offer number )</string>
    <string name="sample_item_price">Unit price of sample</string>
    <string name="sample_item_total">Total</string>
    <string name="all_not_submitted">unsubmitted project</string>
    <string name="news_notify">Notification</string>
    <string name="news_mission">Invite</string>
    <string name="news_announce">Announcement</string>
    <string name="news_resource">Sales resources</string>
    <string name="approval">Approval</string>
    <string name="approval_msg">Please input approval opinion(optional)</string>
    <string name="approval_reason">Approval opinion</string>
</resources>