<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_light_extra"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/approval"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/approval_msg"/>

    <EditText
        android:id="@+id/etReason"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:gravity="center|start"
        android:hint="@string/approval_reason"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:textColorHint="@color/gray_light"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_gray_h"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/confirm"
            android:textColor="@color/blue"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>