<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <tw.com.masterhand.gmorscrm.view.Appbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_size"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_transparent_v_8dp"
            android:orientation="vertical"
            android:showDividers="beginning|middle|end">

            <tw.com.masterhand.gmorscrm.view.ItemNews
                android:id="@+id/itemNewsNotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@mipmap/notice_note"
                app:text="@string/news_notify"/>

            <tw.com.masterhand.gmorscrm.view.ItemNews
                android:id="@+id/itemNewsAnnounce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@mipmap/notice_public"
                app:text="@string/news_announce"/>

            <tw.com.masterhand.gmorscrm.view.ItemNews
                android:id="@+id/itemNewsMission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@mipmap/notice_mission"
                app:text="@string/news_mission"/>

            <tw.com.masterhand.gmorscrm.view.ItemNews
                android:id="@+id/itemNewsResource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@mipmap/notice_resources"
                app:text="@string/news_resource"/>

            <tw.com.masterhand.gmorscrm.view.ItemNews
                android:id="@+id/itemNotSubmitted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@mipmap/notice_resources"
                app:text="@string/all_not_submitted" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
